2008-07-09  Jesper Louis Andersen  <jlouis@ogre.home>

	* SRC: Implement passive sockets. Preliminary for better rate measurement.

2008-07-08  Jesper Louis Andersen  <jlouis@ogre.home>

	* SRC: Implement the event manager for etorrent.

	* SRC: New choking/unchoking algorithm. Inspired by BitTornado.

2008-07-06  Jesper Louis Andersen  <jlouis@ogre.home>

	* SRC: etorrent now uses much less memory

	* SRC: Say hello to etorrent:show/1

	* SRC: Abbreviations added to common etorrent: commands.

2008-07-03  Jesper Louis Andersen  <jlouis@ogre.home>

	* SRC: Plug a bug when stopping torrents and matching on the wrong record.

	* SRC: Improve the FS system a bit via some low-hanging fruit.

	* SRC: Wait 15 seconds on a new_incoming_peer before timeouting.

	* SRC: etorrent will now fill a file via the OS. This is much
	       faster than what we had earlier.

	* SRC: Implement etorrent_ctl.erl.

	* INFRA: Correct etorrentctl shell script.

	* BUILD: Support installation some more.

2008-07-01  Jesper Louis Andersen  <jlouis@ogre.home>

	* BUILD: New build infrastructure, based on EMakefile and plain Make.

	* SRC: Plug a piece storage race condition.

	* SRC: Etorrent now understands 'min interval' tracker responses.

	* SRC: Fix issues 45, 47.

2008-06-30  Jesper Louis Andersen  <jlouis@ogre.home>

	* SRC: Implement etorrent:list/0 with help from Tuncer Ayaz.

	* SRC: Implement etorrent:help/0 for getting help from the system.

2008-06-28  Jesper Louis Andersen  <jlouis@ogre.home>

	* SRC: Implement support for incoming connections.

	* SRC: Etorrent now knows about seeding.

	* SRC: Fix Issue-3: Implement endgame support.

	* SRC: Fix Issue-42: Peer Queue Watermarking.

2008-06-27  Jesper Louis Andersen  <jlouis@succubus.home>

	* DOC: Added HACKING Document.

	* DOC: Started Changelog.

